# melo_mashiro

./: .gitignore  .pdm-python  LICENSE  pyproject.toml  test.py  test2.py
src/: bot.py
src/bestdori/: cards.py  degrees.py  player.py  tracker.py
src/bestdori/API/: api.json  api.py
src/plugins/: bandori.py  test.py
