[project]
name = "melo-mashiro"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Atr1ck", email = "3126670240@qq.com"},
]
dependencies = ["melobot[onebot]>=3.1.3", "pillow>=11.1.0", "requests>=2.32.3", "cairosvg>=2.7.1", "pycairo>=1.27.0", "wand>=0.6.13", "lxml>=5.3.1", "defusedxml>=0.7.1", "svglib>=1.5.1", "reportlab>=4.3.1", "diskcache>=5.6.3"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
